[gd_scene load_steps=4 format=3 uid="uid://krp74lcu376a"]

[ext_resource type="Script" path="res://scenes/ui/upgrade_menu/upgrade_option.gd" id="1_vr63v"]
[ext_resource type="Resource" uid="uid://d3m24lngyd006" path="res://scenes/resources/upgrade_folder/NullUpgrade.tres" id="2_gdevu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1tgm"]

[node name="UpgradeOption" type="Control"]
custom_minimum_size = Vector2(164, 200)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vr63v")
base_null_upgrade = ExtResource("2_gdevu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Upgrade Title"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Stats"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_k1tgm")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="DescLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(144, 124)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "word word word word word word wordword word word word word word wordword word word word word word wordword word word word word word wordword word word word word word wordword word word word word word wordword word word word word word word"
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_k1tgm")

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Buy for 250c"
